add support for multiple embeds

--- a/stingray-playground/index.html
+++ b/stingray-playground/index.html
@@ -30,16 +30,29 @@
                         <option value="prod">Prod</option></select>
                     </div>
                     <div class="form-block">
-                      <label class="label" for="eid">// EID</label>
-                      <input class="text-field w-input" name="eid" type="text">
+                      <label class="label" for="eid1">// EID1</label>
+                      <input class="text-field w-input" name="eid1" type="text">
                     </div>
                     <div class="form-block">
-                      <label class="label" for="affiliateCode">// Affiliate Code</label>
-                      <input class="text-field w-input" name="affiliateCode" type="text">
+                      <label class="label" for="affiliateCode1">// Affiliate Code</label>
+                      <input class="text-field w-input" name="affiliateCode1" type="text">
+                    </div>
+                    <div class="form-block">
+                      <label class="label" for="eid2">// EID2</label>
+                      <input class="text-field w-input" name="eid2" type="text">
+                    </div>
+                    <div class="form-block">
+                      <label class="label" for="affiliateCode2">// Affiliate Code2</label>
+                      <input class="text-field w-input" name="affiliateCode2" type="text">
                     </div>
                     <div class="checkbox-field w-checkbox">
-                      <input class="checkbox w-checkbox-input" name="modal" type="checkbox">
-                      <label class="check-label label w-form-label" for="modal">// Modal</label>
+                      <input class="checkbox w-checkbox-input" name="modal1" type="checkbox">
+                      <label class="check-label label w-form-label" for="modal1">// Modal 1</label>
+                    </div>
+
+                    <div class="checkbox-field w-checkbox">
+                      <input class="checkbox w-checkbox-input" name="modal2" type="checkbox">
+                      <label class="check-label label w-form-label" for="modal2">// Modal 2</label>
                     </div>
 
                     <div class="divider"></div>
@@ -50,7 +63,8 @@
             </div>
         </div>
 
-        <div class="inline-container" id="checkout-widget"></div>
+        <div class="inline-container" id="checkout-widget1"></div>
+        <div class="inline-container" id="checkout-widget2"></div>
 
     </body>
 </html>
